syntax = "proto3";

package pb;

option go_package ="./pb";

message FavoriteActionReq {
  int64 video_id = 1;
  int32 action_type= 2;
  int64 user_id=3;
}

message Empty {}

message GetFavoriteListReq{
  int64 user_id = 1; // 用id
}

message GetFavoriteListReply{
  repeated Video video_list=1;
}

message CommentActionReq {
  int64 video_id = 1; // 视频id
  int32 action_type = 2; // 1-发布评论，2-删除评论
  optional string comment_text = 3; // 用户填写的评论内容，在action type=1的时候使用
  optional int64 comment_id = 4; // 要删除的评论id，在action type=2的时候使用
  int64 user_id=5;
}

message CommentActionReply {
  optional Comment comment = 1; // 评论成功返回评论内容，不需要重新拉取整个列表
}

message GetCommentListReq{
  int64 video_id = 1; // 视频id
}

message GetCommentListReply{
  repeated Comment comment_list = 2; // 评论列表
}

message Video {
  int64 id = 1; // 视频唯一标识
  User author = 2; // 视频作者信息
  string play_url= 3; // 视频播放地
  string cover_url= 4; // 视频面地
  int64 favorite_count = 5; // 视频的点避总券
  int64 comment_count = 6; // 视频的评论总数
  bool is_favorite = 7; // true-已点赞，false-未点赞
  string title = 8; // 视频标题
}

message User {
  int64 id = 1; // 用广id
  string name = 2; // 用广名称
  optional int64 follow_count = 3; // 注总数
  optional int64 follower_count = 4; // 粉丝总数
  bool is_follow = 5; // true-已关注，false-未关注
}

message Comment {
  int64 id = 1; // 视频评论id
  User author = 2; // 评论用户信息
  string content = 3; // 评论内容
  string create_date = 4; // 评论发布日期，格 mm-dd
}

service interaction{
  rpc FavoriteAction(FavoriteActionReq)returns(Empty);
  rpc GetFavoriteList(GetFavoriteListReq)returns(GetFavoriteListReply);
  rpc CommentAction(CommentActionReq)returns(CommentActionReply);
  rpc GetCommentList(GetCommentListReq)returns(GetCommentListReply);
}